# automaticTinderChat

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_web.py  version.py
.github/: PULL_REQUEST_TEMPLATE.md
ai/: __init__.py  ai_service.py  base_provider.py  claude_provider.py  deepseek_provider.py  openai_provider.py  provider_manager.py
automation/: __init__.py  browser.py  data_validation_service.py  execution_service.py  extractors.py  idempotency.py  match_data_service.py  match_fetching.py  match_helpers.py  match_validation.py  message_handler.py  orchestrator.py  profile_syncer.py  state_manager.py  tinder_scraping.py
config/: __init__.py  ai_providers.json  settings.py
data/: .gitkeep
database/: __init__.py  connection.py  models.py  repositories.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DATABASE.md  FASTAPI_MIGRATION_REPORT.md  OPEN_SOURCE_CHECKLIST.md  PYTHON_VS_TYPESCRIPT_ANALYSIS.md  TECHNOLOGY.md  UI_MODERNIZATION.md
reports/: __init__.py  generator.py
scripts/: db_cleanup.py  update_match_status.py
services/: __init__.py  analytics_service.py  embeddings_cache.py  ml_adaptive.py  notification_service.py  scheduler_service.py
tests/: conftest.py  test_ai.py  test_ai_logger.py  test_automation.py  test_cache.py  test_database.py  test_e2e.py  test_edge_cases.py  test_embeddings_cache.py  test_headless_sync.py  test_idempotency.py  test_integration.py  test_log_cleaner.py  test_log_guidelines.py  test_match_helpers.py  test_match_validation.py  test_ml_adaptive.py  test_pagination.py  test_rate_limiter.py  test_resend_feature.py  test_security.py  test_services.py  test_utils.py  test_web_api.py
utils/: __init__.py  ab_testing.py  ai_logger.py  audit_log.py  background_tasks.py  cache.py  helpers.py  input_sanitizer.py  log_cleaner.py  log_guidelines.py  logger.py  metrics.py  (+4 more)
(+37 files in other folders)
